Fix a problem where spaces in sentences were being collapsed

--- a/cascade.css
+++ b/cascade.css
@@ -3,6 +3,7 @@
 
 .cascade-container * {
   display: inline-block;
+  white-space: pre;
 }
 
 .cascade {
